Bugfixes (#23)
* add access token to logged in user api call.

* remove workaround for scroll issue - it is a backend thing and should be be solved in the frontend.

* fix API POST request - just a missing dollar sign.

* fix scrollbar issue

--- a/src/assets/styles/ant-overrides.css
+++ b/src/assets/styles/ant-overrides.css
@@ -1,6 +1,5 @@
 .ant-layout {
   background-color: white;
-  height: 100%;
 }
 
 .ant-layout-header {
